<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<parent>
		<groupId>io.github.sokybot</groupId>
		<artifactId>soky-bot</artifactId>

		<version>1.0-SNAPSHOT</version>
	</parent>
	<modelVersion>4.0.0</modelVersion>

	<artifactId>soky-bot-launcher</artifactId>

	<properties>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>

	</properties>



	<dependencies>


		<dependency>
			<groupId>org.apache.felix</groupId>
			<artifactId>org.apache.felix.framework</artifactId>
			<version>7.0.5</version>
		</dependency>



	</dependencies>

	<build>
		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.4.1</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<finalName>sokybot</finalName>
							<appendAssemblyId>false</appendAssemblyId>
							<descriptorRefs>
								<descriptorRef>jar-with-dependencies</descriptorRef>
							</descriptorRefs>
						</configuration>
					</execution>
				</executions>
			</plugin>


			<plugin>
				<!-- https://mvnrepository.com/artifact/com.akathist.maven.plugins.launch4j/launch4j-maven-plugin -->

				<groupId>com.akathist.maven.plugins.launch4j</groupId>
				<artifactId>launch4j-maven-plugin</artifactId>
				<version>2.1.2</version>
				<executions>
					<execution>
						<id>l4j-gui</id>
						<phase>package</phase>
						<goals>
							<goal>launch4j</goal>
						</goals>
						<configuration>
							<headerType>gui</headerType>
							<outfile>${sokybot-product-dir}/sokybot.exe</outfile>
							<jar>target/sokybot.jar</jar>
							<errTitle>sokybot-error</errTitle>
							<downloadUrl>http://java.com/download</downloadUrl>
							<stayAlive>false</stayAlive>
							<restartOnCrash>false</restartOnCrash>
							<icon>${sokybot-static-resources}\robot2.ico</icon>


							<classPath>
								<mainClass>org.sokybot.launcher.Main</mainClass>
							</classPath>

							<singleInstance>
								<mutexName>soky-bot</mutexName>
								<windowTitle>Sokybot</windowTitle>
							</singleInstance>
							<jre>
								<path>runtime/bin</path>
								<bundledJre64Bit>false</bundledJre64Bit>
								<bundledJreAsFallback>false</bundledJreAsFallback>
								<minVersion>1.8.0</minVersion>
								<!-- <maxVersion>11</maxVersion> -->
								<jdkPreference>jdkOnly</jdkPreference>
								<runtimeBits>64/32</runtimeBits>
								<!-- <opts> -->
								<!-- <opt>-Djava.endorsed.dirs=./endorsed</opt> -->
								<!-- </opts> -->
							</jre>

							<splash>
								<file>${sokybot-static-resources}\splash\0_450x150_24bit.bmp</file>
								<!-- <file>E:\CS\java-projects\test\osgi\osgi-extention-mechanism\static-resources\splash\0.bmp</file> -->
								<waitForWindow>true</waitForWindow>
								<timeout>300</timeout>
								<timeoutErr>true</timeoutErr>

							</splash>

							<versionInfo>
								<fileVersion>1.0.0.0</fileVersion>
								<txtFileVersion>txt file version?</txtFileVersion>
								<fileDescription>Bot For Silkroad Online Game </fileDescription>
								<copyright>Soky</copyright>
								<productVersion>1.0.0.0</productVersion>
								<txtProductVersion>txt product version</txtProductVersion>
								<productName>Sokybot</productName>
								<internalName>sokybot</internalName>
								<originalFilename>sokybot.exe</originalFilename>
							</versionInfo>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>